--- a/projects/user-portal/src/app/system/main/main.component.scss
+++ b/projects/user-portal/src/app/system/main/main.component.scss
@@ -77,6 +77,7 @@ $appShadowClr: rgba(#000, .3);
           transition: transform 1500ms 2000ms + 100ms * ($i - 1), opacity 1500ms 2750ms + 250ms * ($i - 1);
         }
       }
+
       &--4 {
         font: {
           size: 50px;
@@ -84,12 +85,14 @@ $appShadowClr: rgba(#000, .3);
         }
         color: #0A101D;
       }
+
       &--3 {
         font: {
           size: 40px;
           weight: 300;
         }
       }
+
       &--2 {
         margin-top: 10px;
         font: {
@@ -98,8 +101,10 @@ $appShadowClr: rgba(#000, .3);
         }
         color: #0099CC;
       }
+
       &--1 {
         margin-top: 15px;
+
         img {
           width: 50px;
         }
@@ -149,6 +154,7 @@ $appShadowClr: rgba(#000, .3);
   .app__img {
     transform: translate3d(0, 0, 0);
   }
+
   .app__text--1 {
     @for $i from 1 through 4 {
       .app__text-line--#{$i} {
@@ -164,15 +170,18 @@ $appShadowClr: rgba(#000, .3);
   .app__bgimg {
     transform: translate3d(10px, 0, 0) scale(1.05);
     transition: transform 5s 850ms ease-in-out;
+
     .app__bgimg-image--2 {
       opacity: 1;
       transition: opacity 0ms 1500ms;
     }
   }
+
   .app__img {
     transition: transform 3s cubic-bezier(0.6, 0.13, 0.31, 1.02);
     transform: translate3d(0, -1410px, 0);
   }
+
   .app__text--1 {
     z-index: -1;
     transition: z-index 0ms 1500ms;
@@ -184,6 +193,7 @@ $appShadowClr: rgba(#000, .3);
       }
     }
   }
+
   .app__text--2 {
     z-index: 1;
 
@@ -204,6 +214,7 @@ $appShadowClr: rgba(#000, .3);
   height: 80px;
   border-radius: 30px;
   border: 5px solid rgba(255, 255, 255, .8);
+
   &:after {
     content: '';
     position: absolute;
@@ -216,16 +227,20 @@ $appShadowClr: rgba(#000, .3);
     background-color: #fff;
     animation: scroll 1s infinite alternate;
     @keyframes scroll {
-      100% {transform: translate(-50%, 15px)}
+      100% {
+        transform: translate(-50%, 15px)
+      }
     }
   }
 }
 
 .pages {
   margin-left: 20px;
+
   &__list {
     list-style-type: none;
   }
+
   &__item {
     position: relative;
     margin-bottom: 10px;
@@ -234,6 +249,7 @@ $appShadowClr: rgba(#000, .3);
     border-radius: 50%;
     border: 3px solid #fff;
     cursor: pointer;
+
     &:after {
       content: '';
       position: absolute;
@@ -247,6 +263,7 @@ $appShadowClr: rgba(#000, .3);
       opacity: 0;
       transition: 500ms;
     }
+
     &:hover:after {
       transform: translate(-50%, -50%) scale(1, 1);
       opacity: 1;
@@ -266,10 +283,12 @@ $appShadowClr: rgba(#000, .3);
   left: 5px;
   bottom: 5px;
   width: 50px;
+
   img {
     width: 100%;
     vertical-align: top;
   }
+
   &--twitter {
     left: auto;
     right: 5px;
