--- a/projects/user-portal/src/app/system/main/main.component.scss
+++ b/projects/user-portal/src/app/system/main/main.component.scss
@@ -46,12 +46,12 @@ $appShadowClr: rgba(#000, .3);
       left: 0;
 
       &--1 {
-        background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/537051/city22222.jpg') center center no-repeat;
+        background: url('/../../../assets/main-nails.jpg') center center no-repeat;
         background-size: cover;
       }
 
       &--2 {
-        background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/537051/forest.jpg') center center no-repeat;
+        background: url('/../../../assets/main-vernis.jpg') center center no-repeat;
         background-size: cover;
         opacity: 0;
         transition: opacity 0ms 1300ms;
