--- a/projects/user-portal/src/app/system/main/main.component.html
+++ b/projects/user-portal/src/app/system/main/main.component.html
@@ -1,5 +1,6 @@
 <div class="cont">
-  <div class="mouse"></div>
+<!--  <div class="mouse"></div>-->
+  <div class="cont-back"></div>
   <div class="app" [ngClass]="{'initial': curSlide === 1, 'active': curSlide === 2}">
     <div class="app__bgimg">
       <div class="app__bgimg-image app__bgimg-image--1">
