--- a/projects/user-portal/src/app/system/system.component.scss
+++ b/projects/user-portal/src/app/system/system.component.scss
@@ -1,4 +1,20 @@
 app-header {
-  position: absolute;
+  position: relative;
   width: 100vw;
+}
+
+app-main {
+  position: relative;
+}
+
+app-new-items {
+  position: relative;
+}
+
+app-bestsellers{
+  position: relative;
+}
+
+app-sale-items {
+  position: relative;
 }
