--- a/projects/user-portal/src/app/system/sale-items/sale-items.component.scss
+++ b/projects/user-portal/src/app/system/sale-items/sale-items.component.scss
@@ -1,10 +1,40 @@
+.wrapper-caption {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+p.sale-caption {
+  margin: 0;
+  text-transform: uppercase;
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.sale-caption-line {
+  width: 100%;
+  height: 1px;
+  background-color: rgba(0, 0, 0, 0.4);
+  margin: 0 30px;
+}
+
 #gallery {
+  display: block;
   position: relative;
-  width: 100px;
-  height: 100px;
-  border: 1px green dotted;
-  margin: 30px 0 0 150px;
-  /* usually an «overflow:hidden» is set here */
+  margin: 30px 0;
+  height: 200px;
+  width: calc(100% - 64px);
+}
+
+.wrapper-carousel {
+  overflow: hidden;
+  border: 2px solid red;
+  margin: 0 30px;
+  height: auto;
+  width: auto;
 }
 
 #gallery ul {
@@ -15,20 +45,35 @@
   left: -100px;
   margin: 0;
   padding: 0;
+  box-sizing: content-box;
 }
 
 #gallery li {
   display: inline-block;
+  text-align: center;
   vertical-align: top;
-  width: 96px;
-  height: 96px;
+  width: 220px;
+  height: 220px;
   white-space: normal;
   padding: 2px;
   font-size: 14px;
 }
+
 #gallery img {
-  width: 96px;
-  height: 96px;
+  width: 160px;
+  height: 160px;
+  display: block;
+  margin: auto;
+}
+
+.wrapper-buttons {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  width: 100vw;
 }
 
 button {
@@ -39,7 +84,6 @@ button {
   cursor: pointer;
   width: 50px;
   text-align: center;
-  margin: 20px -150px 0 150px;
 }
 
 label, a {
