--- a/projects/user-portal/src/app/system/sale-items/sale-items.component.scss
+++ b/projects/user-portal/src/app/system/sale-items/sale-items.component.scss
@@ -26,13 +26,12 @@ p.sale-caption {
   position: relative;
   margin: 30px 0;
   height: 200px;
-  width: calc(100% - 64px);
+  width: calc(100% - 60px);
 }
 
 .wrapper-carousel {
   overflow: hidden;
-  border: 2px solid red;
-  margin: 0 30px;
+  margin: 0 34px;
   height: auto;
   width: auto;
 }
@@ -42,7 +41,7 @@ p.sale-caption {
   white-space: nowrap;
   position: absolute;
   top: 0;
-  left: -100px;
+  left: 0;
   margin: 0;
   padding: 0;
   box-sizing: content-box;
@@ -55,7 +54,7 @@ p.sale-caption {
   width: 220px;
   height: 220px;
   white-space: normal;
-  padding: 2px;
+  //padding: 3vw;
   font-size: 14px;
 }
 
@@ -73,7 +72,7 @@ p.sale-caption {
   justify-content: center;
   align-items: center;
   height: 100px;
-  width: 100vw;
+  width: calc(100vw - 60px);
 }
 
 button {
