--- a/projects/user-portal/src/app/system/system.component.scss
+++ b/projects/user-portal/src/app/system/system.component.scss
@@ -3,18 +3,7 @@ app-header {
   width: 100vw;
 }
 
-app-main {
+app-main, app-new-items, app-bestsellers, app-sale-items, app-footer {
   position: relative;
 }
 
-app-new-items {
-  position: relative;
-}
-
-app-bestsellers{
-  position: relative;
-}
-
-app-sale-items {
-  position: relative;
-}
