--- a/projects/user-portal/src/app/system/header/header.component.html
+++ b/projects/user-portal/src/app/system/header/header.component.html
@@ -1,65 +1,46 @@
 <div class="wrapper">
-  <mat-toolbar class="logo">
+  <mat-toolbar class="logo" routerLink="/">
     <div class="logo-container">
       <p class="logo-name">ArtNail</p>
       <p class="logo-description">PROFESSIONAL</p>
     </div>
   </mat-toolbar>
-  <mat-toolbar class="main-menu">
-  <span class="fill-remaining-space">
-    <button mat-button [matMenuTriggerFor]="menu" #menuTrigger="matMenuTrigger" (mouseover)="menuTrigger.openMenu()">
-<!--      <mat-icon>menu</mat-icon>-->
-      <p [ngClass]="{'hover-button': menuTrigger.menuOpen}">Гель лаки</p>
-    </button>
-    <mat-menu #menu="matMenu" [overlapTrigger]="false" class="my-menu">
-    <span (mouseleave)="menuTrigger.closeMenu()">
-      <button mat-menu-item>
-        <mat-icon>home</mat-icon>
-        <span>Палитра гель-лаков</span>
-      </button>
-      <button mat-menu-item>
-        <mat-icon>videocam</mat-icon>
-        <span>Обезжиреватели</span>
-      </button>
-      <button mat-menu-item>
-        <mat-icon>videocam</mat-icon>
-        <span>Праймеры</span>
-      </button>
-       <button mat-menu-item>
-        <mat-icon>people_outline</mat-icon>
-        <span>Базы</span>
-      </button>
-      <button mat-menu-item>
-        <mat-icon>exit_to_app</mat-icon>
-        <span>Топы</span>
-      </button>
-       <button mat-menu-item>
-        <mat-icon>exit_to_app</mat-icon>
-        <span>Жидкость для снятия гель-лака/акрила</span>
-      </button>
-    </span>
-    </mat-menu>
 
-    <button mat-button [matMenuTriggerFor]="menu1" #menuTrigger1="matMenuTrigger" (mouseover)="menuTrigger1.openMenu()">
-      <p [ngClass]="{'hover-button': menuTrigger1.menuOpen}">Лаки для ногтей</p>
+  <mat-toolbar class="main-menu" role="heading">
+  <span class="fill-remaining-space">
+      <button mat-button [matMenuTriggerFor]="menu" #menuTrigger1="matMenuTrigger" (mouseover)="menuTrigger1.openMenu()">
+        <p [ngClass]="{'hover-button': menuTrigger1.menuOpen}">Гель лаки</p>
     </button>
-    <mat-menu #menu1="matMenu" [overlapTrigger]="false" class="my-menu">
+
+    <mat-menu #menu="matMenu" [overlapTrigger]="false" class="my-menu">
     <span (mouseleave)="menuTrigger1.closeMenu()">
       <button mat-menu-item>
         <mat-icon>home</mat-icon>
-        <span>Палитра лаков</span>
-      </button>
-      <button mat-menu-item>
-        <mat-icon>people_outline</mat-icon>
-        <span>Антисептики</span>
+        <span routerLink="/polishPalette">Палитра гель-лаков</span>
       </button>
       <button mat-menu-item>
         <mat-icon>videocam</mat-icon>
-        <span>Ремуверы для кутикулы</span>
+        <span routerLink="/degreaser">Обезжиреватели</span>
+      </button>
+      <button mat-menu-item>
+        <mat-icon>videocam</mat-icon>
+        <span routerLink="/primer">Праймеры</span>
+      </button>
+       <button mat-menu-item>
+        <mat-icon>people_outline</mat-icon>
+        <span routerLink="/basePolish">Базы</span>
       </button>
       <button mat-menu-item>
         <mat-icon>exit_to_app</mat-icon>
-        <span>Масла для кутикулы</span>
+        <span routerLink="/topPolish">Топы</span>
+      </button>
+       <button mat-menu-item>
+        <mat-icon>exit_to_app</mat-icon>
+        <span routerLink="/polishRemover">Жидкость для снятия гель-лака/акрила</span>
+      </button>
+       <button mat-menu-item>
+        <mat-icon>exit_to_app</mat-icon>
+        <span routerLink="/polish">Все продукты</span>
       </button>
     </span>
     </mat-menu>
@@ -84,6 +65,10 @@
       <button mat-menu-item>
         <mat-icon>exit_to_app</mat-icon>
         <span>Гибридные лампы</span>
+      </button>
+       <button mat-menu-item>
+        <mat-icon>exit_to_app</mat-icon>
+        <span>Все продукты</span>
       </button>
     </span>
     </mat-menu>
@@ -117,14 +102,18 @@
         <mat-icon>exit_to_app</mat-icon>
         <span>Шпатели</span>
       </button>
+       <button mat-menu-item>
+        <mat-icon>exit_to_app</mat-icon>
+        <span>Все продукты</span>
+      </button>
     </span>
     </mat-menu>
 
-    <button mat-button [matMenuTriggerFor]="menu" #menuTrigger4="matMenuTrigger" (mouseover)="menuTrigger4.openMenu()">
-      <p [ngClass]="{'hover-button': menuTrigger4.menuOpen}">Контакты</p>
+    <button mat-button [matMenuTriggerFor]="menu5" #menuTrigger5="matMenuTrigger" (mouseover)="menuTrigger5.openMenu()">
+      <p [ngClass]="{'hover-button': menuTrigger5.menuOpen}">Контакты</p>
     </button>
-    <mat-menu #menu="matMenu" [overlapTrigger]="false" class="my-menu">
-    <span (mouseleave)="menuTrigger4.closeMenu()">
+    <mat-menu #menu5="matMenu" [overlapTrigger]="false" class="my-menu">
+    <span (mouseleave)="menuTrigger5.closeMenu()">
       <button mat-menu-item>
         <mat-icon>videocam</mat-icon>
         <span>Телефон</span>
@@ -139,8 +128,8 @@
       </button>
     </span>
     </mat-menu>
-
   </span>
+
     <span class="client-data">
     <button mat-button>
       <mat-icon>search</mat-icon>
@@ -154,3 +143,4 @@
   </span>
   </mat-toolbar>
 </div>
+<router-outlet></router-outlet>
