--- a/projects/user-portal/src/app/system/system.component.html
+++ b/projects/user-portal/src/app/system/system.component.html
@@ -1,5 +1,7 @@
-<app-header></app-header>
+<router-outlet></router-outlet>
 <app-main></app-main>
 <app-new-items></app-new-items>
 <app-bestsellers></app-bestsellers>
 <app-sale-items></app-sale-items>
+<app-footer></app-footer>
+
