--- a/projects/user-portal/src/styles.scss
+++ b/projects/user-portal/src/styles.scss
@@ -2,3 +2,7 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mat-button-focus-overlay {
+  background-color: transparent!important;
+}
