--- a/projects/user-portal/src/app/polish/polish-palette/polish-palette.component.scss
+++ b/projects/user-portal/src/app/polish/polish-palette/polish-palette.component.scss
@@ -78,6 +78,7 @@ h1 {
   font-size: 14px;
   margin: 15px;
   padding: 20px;
+  border: 2px solid white;
 }
 
 #gallery img {
@@ -106,12 +107,13 @@ p.price-item {
 p.description-item {
   font-size: 14px;
   color: #626262;
-  height: 38px;
+  height: 28px;
+  line-height: 1;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
-li:hover {
+#gallery li:hover {
   cursor: pointer;
   border: 2px solid black;
 }
