--- a/projects/user-portal/src/app/system/header/header.component.html
+++ b/projects/user-portal/src/app/system/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <mat-toolbar class="logo" routerLink="/">
+  <mat-toolbar class="logo" routerLink="/main">
     <div class="logo-container">
       <p class="logo-name">ArtNail</p>
       <p class="logo-description">PROFESSIONAL</p>
@@ -143,4 +143,3 @@
   </span>
   </mat-toolbar>
 </div>
-<router-outlet></router-outlet>
