--- a/projects/user-portal/src/app/polish/polish-palette/polish-palette.component.html
+++ b/projects/user-portal/src/app/polish/polish-palette/polish-palette.component.html
@@ -2,7 +2,7 @@
 <div class="title">
   <h1>Палитра гель лаков</h1>
   <div class="number-group">
-    <p class="number product-title">10</p>
+    <p class="number product-title">{{items.length}}</p>
     <div class="line"></div>
   </div>
   <p class="word product-title">продуктов</p>
