--- a/projects/user-portal/src/app/polish/primer/primer.component.html
+++ b/projects/user-portal/src/app/polish/primer/primer.component.html
@@ -1,1 +1,22 @@
-<p>primer works!</p>
+<app-bread-crumb [breadcrumbs]="breadcrumbs"></app-bread-crumb>
+<div class="title">
+  <h1>Праймеры</h1>
+  <div class="number-group">
+    <p class="number product-title">{{primers.length}}</p>
+    <div class="line"></div>
+  </div>
+  <p class="word product-title">продуктов</p>
+</div>
+<div class="second-part"></div>
+
+<div id="gallery">
+  <ul>
+    <li *ngFor="let primer of primers" (click)="onClick($event, primer)">
+      <img src="{{primer.image}}">
+      <p class="name-item">{{primer.name}}</p>
+      <p class="description-item">{{primer.description}}</p>
+      <p class="price-item">{{primer.price}}</p>
+    </li>
+  </ul>
+</div>
+
