--- a/projects/user-portal/src/app/system/header/header.component.html
+++ b/projects/user-portal/src/app/system/header/header.component.html
@@ -94,7 +94,8 @@
       <mat-icon routerLink="/registration">person_outline</mat-icon>
     </button>
     <button mat-button>
-      <mat-icon>work_outline</mat-icon>
+      <mat-icon routerLink="/basket">work_outline</mat-icon>
+      <span class="item-count">{{currentItemCount}}</span>
     </button>
   </span>
   </mat-toolbar>
