--- a/projects/user-portal/src/app/basket/basket.component.html
+++ b/projects/user-portal/src/app/basket/basket.component.html
@@ -1,59 +1,59 @@
 <app-bread-crumb [breadcrumbs]="breadcrumbs"></app-bread-crumb>
 
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
   <ng-container matColumnDef="position">
     <th mat-header-cell *matHeaderCellDef> No.</th>
     <td mat-cell *matCellDef="let item; let i = index"> {{i + 1}} </td>
     <td mat-footer-cell *matFooterCellDef></td>
-
   </ng-container>
 
   <ng-container matColumnDef="image">
     <th mat-header-cell *matHeaderCellDef> Продукт</th>
     <td mat-cell *matCellDef="let item"> <img src ="{{item.image}} " alt="" class="basket-image-product"></td>
     <td mat-footer-cell *matFooterCellDef></td>
-
   </ng-container>
 
-  <!-- Name Column -->
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef> Название</th>
     <td mat-cell *matCellDef="let item"> {{item.name}} </td>
     <td mat-footer-cell *matFooterCellDef></td>
-
   </ng-container>
 
-  <!-- Weight Column -->
   <ng-container matColumnDef="price">
     <th mat-header-cell *matHeaderCellDef> Цена</th>
     <td mat-cell *matCellDef="let item"> {{item.price}} </td>
     <td mat-footer-cell *matFooterCellDef></td>
-
   </ng-container>
 
-  <!-- Symbol Column -->
   <ng-container matColumnDef="quantity">
     <th mat-header-cell *matHeaderCellDef> Количество</th>
-    <td mat-cell *matCellDef="let item"> <input class="product-number" type="number" [min]="1" [(ngModel)]="item.quantity" ></td>
+    <td mat-cell *matCellDef="let item"> <input class="product-number" type="number" [min]="1" [(ngModel)]="item.quantity" >{{toChangeQuality(item)}}</td>
     <td mat-footer-cell *matFooterCellDef></td>
-
   </ng-container>
 
   <ng-container matColumnDef="toDelete">
     <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let element">  </td>
+    <td mat-cell *matCellDef="let item"> <button mat-icon-button> <mat-icon (click)="toDeleteProduct(item)">delete</mat-icon></button>  </td>
     <td mat-footer-cell *matFooterCellDef></td>
-
   </ng-container>
 
   <ng-container matColumnDef="total">
     <th mat-header-cell *matHeaderCellDef>Всего</th>
     <td mat-cell *matCellDef="let element"></td>
-    <td mat-footer-cell *matFooterCellDef> {{getTotalCost()}}  </td>
+    <td mat-footer-cell *matFooterCellDef> {{getTotalCost()}}</td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
 </table>
+
+<button class="basket-button">
+  Продолжить покупки
+</button>
+
+<button class="basket-button" routerLink="/connection">
+  Оформить заказ
+</button>
+
+
